--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@tailwindcss/vite": "^4.1.11",
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.13",
+    "file-saver": "^2.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.1"
+    "react-router": "^7.7.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
