--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@mui/material": "^7.3.1",
     "@mui/x-data-grid": "^8.9.2",
     "@mui/x-date-pickers": "^8.9.2",
-    "@supabase/supabase-js": "^2.53.0",
+    "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/vite": "^4.1.11",
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.13",
@@ -25,6 +25,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1",
+    "react-to-pdf": "^2.0.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
