--- a/package.json
+++ b/package.json
@@ -10,20 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.1",
     "@fontsource/roboto": "^5.2.6",
-    "@mui/icons-material": "^7.3.1",
-    "@mui/material": "^7.3.1",
-    "@mui/x-data-grid": "^8.9.2",
-    "@mui/x-date-pickers": "^8.9.2",
     "@supabase/supabase-js": "^2.58.0",
     "@tailwindcss/vite": "^4.1.11",
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
+    "lucide-react": "^0.563.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-router": "^7.7.1",
     "react-to-pdf": "^2.0.1",
     "xlsx": "^0.18.5"
