--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "copy-to-clipboard": "^3.3.3",
     "dayjs": "^1.11.13",
     "file-saver": "^2.0.5",
+    "html-to-image": "^1.11.13",
     "lucide-react": "^0.563.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
