--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hot-toast": "^2.6.0",
     "react-router": "^7.7.1",
     "react-to-pdf": "^2.0.1",
+    "recharts": "^3.7.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
